--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,8 +7,9 @@ ja:
         iwate: "岩手"
         miyagi: "宮城"
         akita: "秋田"
-        yamagata: "山口"
+        yamagata: "山形"
         fukushima: "福島"
+
         ibaraki: "茨城"
         tochigi: "栃木"
         gunma: "群馬"
@@ -16,15 +17,17 @@ ja:
         chiba: "千葉"
         tokyo: "東京"
         kanagawa: "神奈川"
+
         niigata: "新潟"
         toyama: "富山"
         ishikawa: "石川"
         fukui: "福井"
         yamanashi: "山梨"
-        nagoya: "名古屋"
+        nagano: "長野"
         gifu: "岐阜"
         shizuoka: "静岡"
         aichi: "愛知"
+
         mie: "三重"
         shiga: "滋賀"
         kyoto: "京都"
@@ -32,15 +35,18 @@ ja:
         hyogo: "兵庫"
         nara: "奈良"
         wakayama: "和歌山"
+        
         tottori: "鳥取"
         shimane: "島根"
         okayama: "岡山"
         hiroshima: "広島"
         yamaguchi: "山口"
+        
         tokushima: "徳島"
         kagawa: "香川"
         ehime: "愛媛"
         kochi: "高知"
+        
         fukuoka: "福岡"
         saga: "佐賀"
         nagasaki: "長崎"
